--- a/src/app/shared/layout/header-nav-bar/header-nav-bar.component.html
+++ b/src/app/shared/layout/header-nav-bar/header-nav-bar.component.html
@@ -9,7 +9,7 @@
         <i-bs name="person-circle" class="p-1"></i-bs>
         <button
           type="button"
-          class="btn user-name ms-2"
+          class="btn user-name ms-2 border-0"
           id="dropdownBasic1"
           ngbDropdownToggle
         >
@@ -29,7 +29,7 @@
       </div>
 
       <button
-        class="d-block d-xl-none btn"
+        class="d-block d-xl-none btn border-0"
         type="button"
         (click)="expandToggle()"
       >
