--- a/src/app/shared/layout/sidebar/sidebar.component.scss
+++ b/src/app/shared/layout/sidebar/sidebar.component.scss
@@ -35,3 +35,11 @@
   z-index: 10;
   transition: 0.3s;
 }
+.project-version {
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 16px;
+}
+.active-tab {
+  background-color: #a2a9b1;
+}
