--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -1,34 +1,20 @@
 <div class="d-xl-flex flex-column pt-2 text-white sidebar-wrapper h-100">
-  <ul class="nav nav-pills flex-column mb-sm-auto mb-0">
+  <ul class="nav nav-pills flex-column mb-sm-auto mb-0 d-block">
     <li *ngIf="isLoggedIn" ngbDropdown class="nav-item d-xl-none py-1 px-3">
       <button
         type="button"
-        class="btn user-name text-start px-0 w-100 border-0"
+        class="btn nav user-name text-start ps-0 pe-3 w-100 border-0 elipsis d-block"
         id="dropdownBasic1"
         ngbDropdownToggle
       >
-        <i class="bi bi-person-lines-fill me-1"></i>
-        <span class="user-name">
+        <i-bs name="person-lines-fill"></i-bs>
+        <span class="user-name ms-3">
           {{ userName }}
         </span>
       </button>
       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
         <button (click)="logout()" ngbDropdownItem>Выйти</button>
       </div>
-    </li>
-    <li class="nav-item py-1 px-3">
-      <a class="nav-link align-middle px-0" href="#" role="button">
-        <i class="bi bi-person-raised-hand"></i>
-        <span class="ms-3">Администрирование</span>
-      </a>
-    </li>
-    <li class="nav-item py-1 px-3">
-      <a class="nav-link align-middle px-0" href="#" role="button">
-        <span>СуперАгент <span class="f-300">Банк ВТБ(ПАО)</span> </span>
-        <i
-          class="bi bi-caret-down-fill justify-content-end drop-down-arrow py-1 pe-2"
-        ></i>
-      </a>
     </li>
     <li class="nav-item py-1 active-tab px-3">
       <a
@@ -40,6 +26,18 @@
         <span class="ms-3">Управление</span>
       </a>
     </li>
+    <li class="nav-item py-1 px-3">
+      <a class="nav-link align-middle px-0" role="button">
+        <i class="bi bi-person-raised-hand"></i>
+        <span class="ms-3">Администрирование</span>
+      </a>
+    </li>
+    <li class="nav-item py-1 px-3">
+      <a class="nav-link align-middle px-0 elipsis" role="button">
+        <span>СуперАгент <span class="f-300">Банк ВТБ(ПАО)</span> </span>
+      </a>
+    </li>
+
     <li class="nav-item nav-item-end py-1 px-3">
       <a
         class="nav-link align-middle px-0"
