--- a/src/app/shared/layout/sidebar/sidebar.component.scss
+++ b/src/app/shared/layout/sidebar/sidebar.component.scss
@@ -9,18 +9,12 @@
 .user-name {
   color: white;
 }
-.drop-down-arrow {
-  float: right;
-  font-size: 0.7em;
-}
 .dropdown-toggle::after {
-  float: right;
-  margin-top: 0.5rem;
-  margin-right: 0.5rem;
+  display: none;
 }
 .nav {
   font-weight: 700;
-  font-size: small;
+  font-size: smaller;
 }
 .nav-item {
   border-bottom: 1px solid #a2a9b1;
@@ -42,4 +36,13 @@
 }
 .active-tab {
   background-color: #a2a9b1;
+}
+.elipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-right: calc(1.5em + 0.75rem);
+  background-image: url(../../../../assets/svg//down-arrow-white.svg);
+  background-repeat: no-repeat;
+  background-position: right calc(0.375em - 0.25rem) center;
+  background-size: calc(0.5em + 0.25rem) calc(0.5em + 0.25rem);
 }
