--- a/src/app/pages/management/management.component.scss
+++ b/src/app/pages/management/management.component.scss
@@ -27,6 +27,10 @@ thead > tr > th {
 tbody > tr > th {
   padding: 1em 0.5em;
   font-size: 0.8em;
+  & span {
+    max-width: 8rem;
+    margin: 0 auto;
+  }
 }
 ngb-pagination ::ng-deep ul > li:not(.active) > a {
   color: black;
