--- a/src/app/pages/subagents/subagents.component.html
+++ b/src/app/pages/subagents/subagents.component.html
@@ -1,4 +1,1 @@
-<p>
-  Страница с субагентами. Для просмотра тестового задания перейдите на вкладку
-  "Управление"
-</p>
+<p>Страница с контрагентами.</p>
