--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -23,18 +23,24 @@
         role="button"
         routerLink="/management"
         ><i-bs name="briefcase-fill"></i-bs>
-        <span class="ms-3">Управление</span>
+        <span class="ms-3">Номенкулатура</span>
       </a>
     </li>
     <li class="nav-item py-1 px-3">
       <a class="nav-link align-middle px-0" role="button">
         <i class="bi bi-person-raised-hand"></i>
-        <span class="ms-3">Администрирование</span>
+        <span class="ms-3">Пользователи</span>
       </a>
     </li>
     <li class="nav-item py-1 px-3">
       <a class="nav-link align-middle px-0 elipsis" role="button">
-        <span>СуперАгент <span class="f-300">Банк ВТБ(ПАО)</span> </span>
+        <span>Поставщик <span class="f-300">STLOUISE</span> </span>
+      </a>
+    </li>
+
+    <li class="nav-item py-1 px-3">
+      <a class="nav-link align-middle px-0 elipsis" role="button">
+        <span>Поставщик <span class="f-300">VISIONIX</span> </span>
       </a>
     </li>
 
@@ -45,7 +51,7 @@
         role="button"
         routerLink="/subagents"
         ><i-bs name="people-fill"></i-bs>
-        <span class="ms-3">Субагенты</span>
+        <span class="ms-3">Оптики</span>
       </a>
     </li>
   </ul>
