--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -1,4 +1,3 @@
 <p>
-  Главная страница. Для просмотра тестового задания перейдите на вкладку
-  "Управление"
+  Главная страница. Для просмотра каталога перейдите на вкладку "Номенкулатура"
 </p>
