--- a/src/app/pages/management/management.component.html
+++ b/src/app/pages/management/management.component.html
@@ -7,9 +7,7 @@
   <div class="header-title">
     <div class="row">
       <div class="col-12">
-        <h3 class="setting-header mb-3">
-          Настройка учетных записей сотрудников контрагента
-        </h3>
+        <h3 class="setting-header mb-3">Каталог линз</h3>
       </div>
       <div class="col-lg-8 d-none d-sm-block mb-3">
         <button
@@ -60,7 +58,7 @@
             (click)="enableAgents()"
             class="btn px-3 header-button w-100 text-nowrap"
           >
-            Разблокировать
+            Забронировать
             <i-bs name="check-circle" class="d-none d-sm-block"></i-bs>
           </button>
         </div>
@@ -70,7 +68,7 @@
             [disabled]="!checkedAgentsList.length"
             class="btn px-3 header-button w-100 text-nowrap"
           >
-            Заблокировать
+            Разбронировать
             <i-bs name="x-circle" class="d-none d-sm-block"></i-bs>
           </button>
         </div>
@@ -104,7 +102,7 @@
                             ? 'disabled'
                             : ''
                         "
-                        >Логин</label
+                        >Наименование</label
                       >
                       <input
                         [class]="
@@ -133,7 +131,7 @@
                             ? 'disabled'
                             : ''
                         "
-                        >Телефон</label
+                        >Диоптрии</label
                       >
                       <input
                         [class]="
@@ -144,7 +142,7 @@
                         [formControlName]="ManagementFormKey.phoneNumber"
                         class="form-control form-control-sm my-1"
                         type="text"
-                        [placeholder]="'+7 (800)-888-88-88'"
+                        [placeholder]="'+0.25'"
                         aria-label="phone"
                       />
                       <div
@@ -173,7 +171,7 @@
                     </div>
 
                     <div class="col-md-3 col-sm-6 col-xs-6">
-                      <label>Статус</label>
+                      <label>Наличие на складе</label>
                       <select
                         [formControlName]="ManagementFormKey.status"
                         class="form-control form-control-sm my-1"
@@ -189,7 +187,7 @@
                       </select>
                     </div>
 
-                    <div class="col-md-3 col-sm-6 col-xs-6">
+                    <!-- <div class="col-md-3 col-sm-6 col-xs-6">
                       <label
                         [ngClass]="
                           form.get([ManagementFormKey.eMail])?.invalid
@@ -216,16 +214,16 @@
                       >
                         Недопустимые символы
                       </div>
-                    </div>
+                    </div> -->
 
                     <div class="col-md-3 col-sm-6 col-xs-6">
-                      <label>Роль</label>
+                      <label>Поставщик</label>
                       <select
                         [formControlName]="ManagementFormKey.role"
                         class="form-control form-control-sm my-1"
                         aria-label="role"
                       >
-                        <option value="" selected>Все роли</option>
+                        <option value="" selected>Все поставщики</option>
                         <option *ngFor="let role of roles" [value]="role">
                           {{ role }}
                         </option>
@@ -307,14 +305,14 @@
                 <span class="checkbox"></span>
               </label>
             </th>
-            <th scope="col">Логин</th>
-            <th scope="col">E-mail</th>
-            <th scope="col">Телефон</th>
-            <th scope="col">Роли</th>
+            <th scope="col">Наименование</th>
+            <!-- <th scope="col">E-mail</th> -->
+            <th scope="col">Диоптрии</th>
+            <th scope="col">Поставщик</th>
             <th scope="col">Дата изменения</th>
             <th scope="col">Дата создания</th>
             <th scope="col">Статус</th>
-            <th class="text-end" scope="col">Наличие ЭП</th>
+            <th class="text-end" scope="col">Забронировано</th>
           </tr>
         </thead>
         <tbody>
@@ -331,9 +329,9 @@
             <th scope="col">
               <span class="d-block elipsis"> {{ item.login }}</span>
             </th>
-            <th scope="col">
+            <!-- <th scope="col">
               <span class="d-block elipsis">{{ item.email }}</span>
-            </th>
+            </th> -->
             <th scope="col">{{ item.phoneNumber }}</th>
             <th scope="col">{{ item.role }}</th>
             <th scope="col">{{ item.editDate | date : "dd.MM.yyyy" }}</th>
